...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note Title*" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qju-LD-mRb">
                                <rect key="frame" x="63" y="98.5" width="93.5" height="21"/>
                                <fontDescription key="fontDescription" name="Ubuntu-Medium" family="Ubuntu" pointSize="18"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xHu-uK-I5K">
                                <rect key="frame" x="63" y="140.5" width="556" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="notesTitleTextFieldID"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="vb5-zU-dEc"/>
...
                                <rect key="frame" x="63" y="272" width="999" height="128"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="notesTextViewID"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="128" id="ljO-Gd-m5c"/>
...
                                    <constraint firstAttribute="width" constant="41" id="5OF-Dq-uRD"/>
                                </constraints>
                                <state key="normal" title="close" image="Close"/>
                                <connections>
                                    <action selector="closeButtonClicked:" destination="nFu-Pa-Vui" eventType="touchUpInside" id="peH-dD-NWf"/>
...
                                                    <rect key="frame" x="609.5" y="33.5" width="111" height="14"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date Modified" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqE-eX-Nq4">
                                                            <rect key="frame" x="0.0" y="0.0" width="91" height="14"/>
                                                            <constraints>
...
                                                    <rect key="frame" x="50" y="33" width="90" height="14"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEX-gf-0tr">
                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="14"/>
                                                            <gestureRecognizers/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="14"/>
                                <state key="normal" title="Edit Note">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="14"/>
                                <state key="normal" title="Delete Note">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
