...
        }else if visitObject?.status == "Completed"{
            visitStatus = .completed
        }else if visitObject?.status == "Planned"{
            visitStatus = .planned
        }
        tableView.reloadData()
        let image = #imageLiteral(resourceName: "delete").withRenderingMode(.alwaysTemplate)
        deleteVisitButton.setImage(image, for: .normal)
        deleteVisitButton.tintColor = UIColor(hexString: "#4287C2")
        deleteVisitButton.setTitle("    Delete Event", for: .normal)
        self.getStartDateAndEndTime()
    }
    
...
    }
    
    @IBAction func deleteVisitButtonTapped(_ sender: UIButton){
        
        if isWorkOrderDataExists(){
            
            AlertUtilities.showAlertMessageWithTwoActionsAndHandler("Event Delete", errorMessage: StringConstants.deleteConfirmation, errorAlertActionTitle: "Delete", errorAlertActionTitle2: "Cancel", viewControllerUsed: self, action1: {
                
                if StoreDispatcher.shared.isWorkOrderCreatedLocally(id: self.visitObject!.Id).0{
                    self.deleteLocalEventEntry()
                    self.dismiss(animated: true, completion: nil)
                }else{
                    
...
            })
        }
    }
    
    func navigateToAccountVisitSummaryScreen() {
        DispatchQueue.main.async {
            //     AlertUtilities.showAlertMessageWithTwoActionsAndHandler("Any changes will not be saved", errorMessage: "Are you sure you want to close?", errorAlertActionTitle: "Yes", errorAlertActionTitle2: "No", viewControllerUsed: self, action1: {
            FilterMenuModel.selectedAccountId = (self.accountObject?.account_Id)!
            self.dismiss(animated: true, completion: nil)
            self.delegate?.navigateToAccountScreen()
            //  }){
            
        }
...
