...
    
    //MARK:- Table view on Swipe EDIT and DELETE actions
    func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath, for orientation: SwipeActionsOrientation) -> [SwipeAction]? {
        
        guard orientation == .right else { return nil }
        
        let editAction = SwipeAction(style: .default, title: "Edit") {action, indexPath in
            
            let appDelegate = UIApplication.shared.delegate as! AppDelegate
            _ = appDelegate.loggedInUser?.userId
            //Edit is allowed only for Note owner
            self.notesDataToEdit = self.tableViewDisplayData[indexPath.row]
            self.performSegue(withIdentifier: "createNoteSegue", sender: nil)
...
            //MARK:Shubham
            //Delete is allowed only for Note owner
          //  if(ownerId == self.notesDataToEdit.ownerId){
            let cell = tableView.cellForRow(at: indexPath) as! NotesTableViewCell
            let closure: (UIAlertAction) -> Void = { _ in cell.hideSwipe(animated: true) }
            let notesDelete = self.tableViewDisplayData[indexPath.row]
            let alert = UIAlertController(title: "Delete Note?", message: StringConstants.deleteNoteConfirmation, preferredStyle: UIAlertControllerStyle.alert)
            let continueAction = UIAlertAction(title: "Delete", style: .default) { action in
                // Handle when button is clicked
                self.tableViewDisplayData.remove(at: indexPath.row)
                self.notesTableView?.reloadData()

                let attributeDict = ["type":"SGWS_Account_Notes__c"]
...
